welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:9: error: reassignment to val
		x = x + 1
                  ^Runner:13: error: not found: value condition
if (condition) {
    ^Runner:14: error: not found: value aFaireSiLaConditionEstVraie
    aFaireSiLaConditionEstVraie();
    ^Runner:16: error: not found: value aFaireSiElleEstFausse
    aFaireSiElleEstFausse();
    ^