welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var x = 1
for ( x <- 1 to 40){
if (!estFaceMur) {
	avance();
} else {
		droite()
		avance()
		x = x + 1
	}
}

if (condition) {
    aFaireSiLaConditionEstVraie();
} else {
    aFaireSiElleEstFausse();
}